News section spacing fixes

--- a/src/components/grid.module.scss
+++ b/src/components/grid.module.scss
@@ -80,3 +80,8 @@
 		}
 	}
 }
+
+.products h3 {
+	color: $grey;
+	font-weight: 300;
+}
