--- a/src/components/news.module.scss
+++ b/src/components/news.module.scss
@@ -7,7 +7,10 @@
 		@extend %sectionHeading;
 	}
 	h3 {
-		margin-bottom: 0;
+		font-size: 1.5rem;
+		font-weight: 700;
+		line-height: 1.9375rem;
+		margin: 0;
 		a {
 			color: white;
 			text-decoration: none;
@@ -23,11 +26,14 @@
 	}
 	.published {
 		color: rgba($color: #ffffff, $alpha: 0.5);
-		margin: 1rem 0;
+		margin: 1rem 0 1.5625rem;
 	}
 
 	.intro p {
-		margin-top: 0.25rem;
+		font-size: 1.125rem;
+		font-weight: 400;
+		line-height: 1.4375rem;
+		margin: 0;
 	}
 
 	.tags label {
@@ -35,7 +41,7 @@
 	}
 	.tags ul {
 		list-style-type: none;
-		margin: 1rem 0 0;
+		margin: 1.5625rem 0 0;
 		padding: 0;
 		li {
 			display: inline;
@@ -69,8 +75,8 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	padding: 10px 12px 10px 18px;
-	gap: 10px;
+	padding: 0.625rem 0.75rem 0.625rem 1.125rem;
+	gap: 0.625rem;
 	text-decoration: none;
 	span::after {
 		content: ' \2192';
