--- a/src/templates/page.module.scss
+++ b/src/templates/page.module.scss
@@ -4,3 +4,8 @@
 	@extend %page-header;
 	margin-bottom: 2rem;
 }
+
+.intro p {
+	font-size: 1.125rem;
+	max-width: 51.25rem;
+}
